gonullu formları alan ve catering icerik guncellemeleri

--- a/templates/forms/gonullu_durum_form.html
+++ b/templates/forms/gonullu_durum_form.html
@@ -77,19 +77,29 @@
                             <option value="" disabled selected>Seçiniz</option>
                             <option value="Selçuk Bey VIP">Selçuk Bey VIP</option>
                             <option value="VIP Salon">VIP Salon</option>
-                            <option value="Yönetim Ofisi / Kriz Masası">Yönetim Ofisi / Kriz Masası</option>
-                            <option value="Vakıf Standı Yönetici Odası">Vakıf Standı Yönetici Odası</option>
-                            <option value="Dinamik Alan">Dinamik Alan</option>
                             <option value="TSK">TSK</option>
-                            <option value="Gönüllü - Bursiyer">Gönüllü - Bursiyer</option>
-                            <option value="Basın">Basın</option>
+                            <option value="Vakıf Standı Yönetici Odası">Vakıf Standı Yönetici Odası</option>
+                            <option value="Vakıf Standı Personel Odası">Vakıf Standı Personel Odası</option>
                             <option value="TRT Kulis Ana Sahne / Muhabir">TRT Kulis Ana Sahne / Muhabir</option>
-                            <option value="Arter / To Do / Kurumsal Ofis / Heysemist">Arter / To Do / Kurumsal Ofis / Heysemist</option>
-                            <option value="Pilot Event">Pilot Event</option>
+                            <option value="CEO">CEO</option>
+                            <option value="Kriz Masası">Kriz Masası</option>
                             <option value="T3 Ofis">T3 Ofis</option>
-                            <option value="Teknofest Robolig Yarışması">Teknofest Robolig Yarışması</option>
-                            <option value="Teknofest KKTC Araştırma Yarışması">Teknofest KKTC Araştırma Yarışması</option>
-                            <option value="Bilim Pavyonu">Bilim Pavyonu</option>
+                            <option value="Bir Çocuk Gelsin Ofis">Bir Çocuk Gelsin Ofis</option>
+                            <option value="Heysemist">Heysemist</option>
+                            <option value="Basın">Basın</option>
+                            <option value="Kurumsal/Arter">Kurumsal/Arter</option>
+                            <option value="Bursiyer-Gönüllü">Bursiyer-Gönüllü</option>
+                            <option value="TEKNOFEST Robolig Yarışması">TEKNOFEST Robolig Yarışması</option>
+                            <option value="Engelsiz Yaşam Teknolojileri Yarışması">Engelsiz Yaşam Teknolojileri Yarışması</option>
+                            <option value="Eğitim Teknolojileri Yarışması">Eğitim Teknolojileri Yarışması</option>
+                            <option value="Finansal Teknolojiler Yarışması">Finansal Teknolojiler Yarışması</option>
+                            <option value="Girişim Yarışma Çadırı">Girişim Yarışma Çadırı</option>
+                            <option value="Derece Çadırı">Derece Çadırı</option>
+                            <option value="Teknofest Kulüpleri Stantı">Teknofest Kulüpleri Stantı</option>
+                            <option value="Bilim Pavilyonu Çadırı">Bilim Pavilyonu Çadırı</option>
+                            <option value="Dinamik Alan">Dinamik Alan</option>
+                            <option value="Pilot Event">Pilot Event</option>
+                            <option value="TEKNOFEST Makeathon Yarışması">TEKNOFEST Makeathon Yarışması</option>
                         </select>
                     </div>
 
@@ -110,25 +120,32 @@
                     <div class="mb-3" id="catering_urunleri_container" style="display: none;">
                         <label class="form-label">Catering Ürünleri</label>
                         <div class="catering-container">
-                            <div class="catering-item" data-value="peynirli-su-boregi">Peynirli Su Böreği</div>
-                            <div class="catering-item" data-value="mercimek-koftesi">Mercimek Köftesi</div>
-                            <div class="catering-item" data-value="tatli-kurabiye">Tatlı Kurabiye</div>
-                            <div class="catering-item" data-value="tuzlu-kurabiye">Tuzlu Kurabiye</div>
-                            <div class="catering-item" data-value="islak-kek-tartolet">Islak Kek Tartolet</div>
-                            <div class="catering-item" data-value="mini-tiramisu">Mini Tiramisu</div>
-                            <div class="catering-item" data-value="mini-brownie">Mini Brownie</div>
-                            <div class="catering-item" data-value="mini-simit-pizza">Mini Simit Pizza</div>
-                            <div class="catering-item" data-value="zeytinyagli-yaprak-sarma">Zeytinyağlı Yaprak Sarma</div>
+                            <div class="catering-item" data-value="mini-ev-pogacasi-cesitleri">Mini Ev Poğaçası Çeşitleri</div>
+                            <div class="catering-item" data-value="taze-kasarli-simit">Taze Kaşarlı Simit</div>
+                            <div class="catering-item" data-value="panini-capata-sandvic-wrap">Panini veya Çapata Ekmekli Sandviç veya Wrap</div>
                             <div class="catering-item" data-value="kanape-cesitleri">Kanape Çeşitleri</div>
-                            <div class="catering-item" data-value="mini-soguk-sandvic">Mini Soğuk Sandviç</div>
-                            <div class="catering-item" data-value="meyve-cesitleri">Meyve Çeşitleri</div>
-                            <div class="catering-item" data-value="kuru-yemis">Kuru Yemiş</div>
-                            <div class="catering-item" data-value="kahve-cesitleri">Kahve Çeşitleri</div>
-                            <div class="catering-item" data-value="cay">Çay</div>
-                            <div class="catering-item" data-value="bitki-cayi">Bitki Çayı</div>
-                            <div class="catering-item" data-value="cam-sise-su">Cam Şişe Su</div>
+                            <div class="catering-item" data-value="mini-borek-cesitleri">Mini Börek Çeşitleri</div>
+                            <div class="catering-item" data-value="mini-kruvasan-cesitleri">Mini Kruvasan Çeşitleri</div>
+                            <div class="catering-item" data-value="tatli-kurabiye-cesitleri">Tatlı Kurabiye Çeşitleri</div>
+                            <div class="catering-item" data-value="tuzlu-kurabiye-cesitleri">Tuzlu Kurabiye Çeşitleri</div>
+                            <div class="catering-item" data-value="mini-kupta-salata-cesitleri">Mini Kupta Amerikan, Akdeniz, Makarna, Börülce, Salata Çeşitleri</div>
+                            <div class="catering-item" data-value="mitte-kofte">Mitte Köfte</div>
+                            <div class="catering-item" data-value="mini-icli-kofte">Mini İçli Köfte</div>
+                            <div class="catering-item" data-value="yaprak-sarma">Yaprak Sarma</div>
+                            <div class="catering-item" data-value="kurduvite">Kürdüvite</div>
+                            <div class="catering-item" data-value="grissini-cubuklari">Grissini Çubukları</div>
+                            <div class="catering-item" data-value="luxury-kuruyemis-tabagi">Luxury Kuruyemiş Tabağı</div>
+                            <div class="catering-item" data-value="mini-kek-cesitleri">Mini Kek Çeşitleri</div>
+                            <div class="catering-item" data-value="mini-kupta-sutlu-tatli-cesitleri">Mini Kupta Sütlü Tatlı Çeşitleri</div>
+                            <div class="catering-item" data-value="mini-tartalet">Mini Tartalet</div>
+                            <div class="catering-item" data-value="mini-tiramisu">Mini Tiramisu</div>
+                            <div class="catering-item" data-value="mini-cheesecake-cesitleri">Mini Cheesecake Çeşitleri</div>
+                            <div class="catering-item" data-value="ekler-cesitleri">Ekler Çeşitleri</div>
+                            <div class="catering-item" data-value="tartelett-meze-cesitleri">Tartelett içinde meze çeşitleri</div>
+                            <div class="catering-item" data-value="cay-cesitleri">Çay Çeşitleri</div>
                             <div class="catering-item" data-value="mesrubat-cesitleri">Meşrubat Çeşitleri</div>
-                            <div class="catering-item" data-value="portakal-suyu-limonata">Portakal Suyu/Limonata</div>
+                            <div class="catering-item" data-value="kahve-cesitleri">Kahve Çeşitleri</div>
+                            <div class="catering-item" data-value="cam-sise-su">Cam Şişe Su / Su</div>
                         </div>
                         <input type="hidden" name="catering_urunleri" id="catering_urunleri_input">
                     </div>
