--- a/templates/forms/gonullu_sorun_form.html
+++ b/templates/forms/gonullu_sorun_form.html
@@ -101,19 +101,29 @@
                             <option value="" disabled selected>Seçiniz</option>
                             <option value="Selçuk Bey VIP">Selçuk Bey VIP</option>
                             <option value="VIP Salon">VIP Salon</option>
-                            <option value="Yönetim Ofisi / Kriz Masası">Yönetim Ofisi / Kriz Masası</option>
-                            <option value="Vakıf Standı Yönetici Odası">Vakıf Standı Yönetici Odası</option>
-                            <option value="Dinamik Alan">Dinamik Alan</option>
                             <option value="TSK">TSK</option>
-                            <option value="Gönüllü - Bursiyer">Gönüllü - Bursiyer</option>
-                            <option value="Basın">Basın</option>
+                            <option value="Vakıf Standı Yönetici Odası">Vakıf Standı Yönetici Odası</option>
+                            <option value="Vakıf Standı Personel Odası">Vakıf Standı Personel Odası</option>
                             <option value="TRT Kulis Ana Sahne / Muhabir">TRT Kulis Ana Sahne / Muhabir</option>
-                            <option value="Arter / To Do / Kurumsal Ofis / Heysemist">Arter / To Do / Kurumsal Ofis / Heysemist</option>
-                            <option value="Pilot Event">Pilot Event</option>
+                            <option value="CEO">CEO</option>
+                            <option value="Kriz Masası">Kriz Masası</option>
                             <option value="T3 Ofis">T3 Ofis</option>
-                            <option value="Teknofest Robolig Yarışması">Teknofest Robolig Yarışması</option>
-                            <option value="Teknofest KKTC Araştırma Yarışması">Teknofest KKTC Araştırma Yarışması</option>
-                            <option value="Bilim Pavyonu">Bilim Pavyonu</option>
+                            <option value="Bir Çocuk Gelsin Ofis">Bir Çocuk Gelsin Ofis</option>
+                            <option value="Heysemist">Heysemist</option>
+                            <option value="Basın">Basın</option>
+                            <option value="Kurumsal/Arter">Kurumsal/Arter</option>
+                            <option value="Bursiyer-Gönüllü">Bursiyer-Gönüllü</option>
+                            <option value="TEKNOFEST Robolig Yarışması">TEKNOFEST Robolig Yarışması</option>
+                            <option value="Engelsiz Yaşam Teknolojileri Yarışması">Engelsiz Yaşam Teknolojileri Yarışması</option>
+                            <option value="Eğitim Teknolojileri Yarışması">Eğitim Teknolojileri Yarışması</option>
+                            <option value="Finansal Teknolojiler Yarışması">Finansal Teknolojiler Yarışması</option>
+                            <option value="Girişim Yarışma Çadırı">Girişim Yarışma Çadırı</option>
+                            <option value="Derece Çadırı">Derece Çadırı</option>
+                            <option value="Teknofest Kulüpleri Stantı">Teknofest Kulüpleri Stantı</option>
+                            <option value="Bilim Pavilyonu Çadırı">Bilim Pavilyonu Çadırı</option>
+                            <option value="Dinamik Alan">Dinamik Alan</option>
+                            <option value="Pilot Event">Pilot Event</option>
+                            <option value="TEKNOFEST Makeathon Yarışması">TEKNOFEST Makeathon Yarışması</option>
                         </select>
                     </div>
                     
