--- a/templates/dashboard/gonullu_durum_raporu.html
+++ b/templates/dashboard/gonullu_durum_raporu.html
@@ -54,7 +54,7 @@
                 
                 <!-- Durum Tablosu -->
                 <div class="table-responsive mb-5">
-                    <table class="table table-bordered table-hover excel-table" data-gun="{{ gun }}" style="width: 50px;">
+                    <table class="table table-bordered table-hover excel-table" data-gun="{{ gun }}" style="width: 100%;">
                         <thead class="table-dark">
                             <tr style="height: 15px;">
                                 <th style="width: 15px;"></th>
