--- a/templates/dashboard/yeni_kelime.html
+++ b/templates/dashboard/yeni_kelime.html
@@ -32,14 +32,14 @@
                         <select class="form-select" id="kullanici" name="kullanici" onchange="this.form.submit()">
                             {% for kullanici in kullanicilar %}
                                 <option value="{{ kullanici.id }}" {% if kullanici.id == secilen_kullanici.id %}selected{% endif %}>
-                                    {{ kullanici.first_name }} {{ kullanici.last_name }}
+                                    {{ kullanici.isim }} {{ kullanici.soyisim }}
                                 </option>
                             {% endfor %}
                         </select>
                     </div>
                     <div>
                         <span class="badge bg-primary fs-6">
-                            <i class="fas fa-book me-1"></i>{{ secilen_kullanici.first_name }}'nin Kelimeleri: {{ toplam_kelime_sayisi }}
+                            <i class="fas fa-book me-1"></i>{{ secilen_kullanici.isim }}'nin Kelimeleri: {{ toplam_kelime_sayisi }}
                         </span>
                     </div>
                 </form>
@@ -100,7 +100,7 @@
         <div class="card shadow">
             <div class="card-header bg-secondary text-white">
                 <h5 class="mb-0">
-                    <i class="fas fa-list me-2"></i>{{ secilen_kullanici.first_name }}'nin Kelimeleri
+                    <i class="fas fa-list me-2"></i>{{ secilen_kullanici.isim }}'nin Kelimeleri
                     <span class="badge bg-light text-dark ms-2">{{ toplam_kelime_sayisi }}</span>
                 </h5>
             </div>
